[package]
name = "ble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
btleplug = "0.10.0"
byteorder = "1.4.3"
env_logger = "0.9.0"
json = "0.12.4"
log = "0.4.17"
palette = "0.6.1"
rand = "0.8.5"
tokio = { version = "1.20.1", features = ["rt", "sync", "full"] }
uuid = "1.1.2"
