[package]
name = "huespatial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bevy = "0.11.3"
bevy-inspector-egui = "0.20.0"
bevy_debug_grid = "0.2.1"
bevy_ecs = "0.11.3"
bevy_flycam = "0.11.0"

reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0.193", features = ["std", "derive"] }
serde_json = "1.0.108"
